[package]
name = "bluebird"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum", features = ["headers"] }
hyper = "0.14"
redis = { version = "0.22", features = ["aio", "tokio-comp"] }
sqlx = { version = "0.6", features = [
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

argon2 = { version = "0.4", features = ["std"] }
async-lock = "2.6"
async-trait = "0.1"
base64 = "0.13"
blake3 = "1.3"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.2", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std"] }
